feat: implement some controllers

--- a/RecipeSharingPlatform.Web/appsettings.json
+++ b/RecipeSharingPlatform.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=RecipeSharingPlatformDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=localhost,1433;Database=RecipeSharingPlatformDb;User Id=sa;Password=Pass#pass12;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=localhost,1433\\mssqllocaldb;Database=RecipeSharingPlatformDb;Trusted_Connection=True;MultipleActiveResultSets=true",
     //"ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=RecipeSharingPlatform.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
